Updating to Java 26